--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -1568,7 +1568,7 @@ None
 
 \subsubsection{Local Functions}
 \begin{itemize}
-    \item calculateEstimatedCost(imgRequest): out := Use information given to calculate the estimated cost of a project.
+    \item calculateEstimatedCost(project): out := Use information given to calculate the estimated cost of a project.
 \end{itemize}
 
 \section{MIS of Project} \label{project}
